@@ -559,7 +559,7 @@
   <target name="get-jenkins-line-docs" unless="enwiki.exists">
     <sequential>
       <!-- TODO: can get .lzma instead (it's ~17% smaller) but there's no builtin ant support...? -->
-      <get src="http://people.apache.org/~mikemccand/enwiki.random.lines.txt.bz2"
+      <get src="http://home.apache.org/~mikemccand/enwiki.random.lines.txt.bz2"
            dest="enwiki.random.lines.txt.bz2"/>
       <bunzip2 src="enwiki.random.lines.txt.bz2" dest="enwiki.random.lines.txt"/>
     </sequential>
